--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -18,7 +18,7 @@
         <title>TASKY</title>
         
     </head>
-    <body>
+    <body onload="loadInitialCardData()">
         <!--model-->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
